Do not declare artificial variables in tree-profile.c to have a definition (PR lto/69188).

2017-01-20  Martin Liska  <mliska@suse.cz>

	PR lto/69188
	* gcc.dg/lto/pr69188_0.c: New test.
	* gcc.dg/lto/pr69188_1.c: New test.
2017-01-20  Martin Liska  <mliska@suse.cz>

	PR lto/69188
	* tree-profile.c (init_ic_make_global_vars): Do not call
	finalize_decl.
	(gimple_init_gcov_profiler): Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@244692 138bc75d-0d04-0410-961f-82ee72b054a4