gcc/testsuite/gcc.dg/lto/pr69188_0.c
@@ -1,0 +1,7 @@
+/* PR ipa/69188 */
+/* { dg-lto-do link } */
+/* { dg-lto-options { { -flto -O0 -fprofile-generate } } } */
+
+void fn1(void) 
+{ 
+}
